SystemUI: Fix issue with uplink downlink arrows on mobile network signal
In status bar,the uplink and downlink symbols are half shown ouside the
signal bar after network is connected.Use layout filter to handle the
mobile signal and it's activity icon

Change-Id: I9cbe49669c7371efb6e6d87b43a05afae98b79f1
CRs-Fixed: 796203

--- a/packages/SystemUI/res/layout/signal_cluster_view.xml
+++ b/packages/SystemUI/res/layout/signal_cluster_view.xml
@@ -130,6 +130,7 @@
                 android:id="@+id/mobile_signal"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content"
+                android:layout_gravity="center|bottom"
                 />
             <LinearLayout
             android:layout_width="wrap_content"
