--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -77,4 +77,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_number_patterns_video_call">true</bool>
 
     <bool name="config_regional_noti_move_away_lte_video_call">true</bool>
+
+    <bool name="config_regional_wifi_calling_menu_enable">false</bool>
+
 </resources>
