--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2389,4 +2389,5 @@
   <java-symbol type="bool" name="config_regional_noti_move_away_lte_video_call" />
   <java-symbol type="bool" name="config_regional_number_patterns_video_call" />
   <java-symbol type="bool" name="config_regional_display_contact_photo_video_call_off"/>
+  <java-symbol type="bool" name="config_regional_wifi_calling_menu_enable" />
 </resources>
