Regional: add overlay flag for Wifi Calling Registration Error Codes
For some regional carriers, when the Wifi Calling registration failures.
User should facing different message with different error code.

Change-Id: I207fabbc2a774e330b1ea6b8bfe49a336d3353a4

--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -80,4 +80,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     <bool name="config_regional_wifi_calling_menu_enable">false</bool>
 
+    <bool name="config_regional_wifi_calling_registration_errorcode">false</bool>
 </resources>
