--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2390,4 +2390,5 @@
   <java-symbol type="bool" name="config_regional_number_patterns_video_call" />
   <java-symbol type="bool" name="config_regional_display_contact_photo_video_call_off"/>
   <java-symbol type="bool" name="config_regional_wifi_calling_menu_enable" />
+  <java-symbol type="bool" name="config_regional_wifi_calling_registration_errorcode" />
 </resources>
