Regional: Add alert before wifi call drop
Some carriers require an alert pops up before wifi call drop.
If there is no LTE to handover and wifi signal is low than
threshod, such an alert is diaplayed.

Change-Id: I4f0e93ffaa9525263fadce458e697fb5ba5af1d6

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2391,4 +2391,6 @@
   <java-symbol type="bool" name="config_regional_display_contact_photo_video_call_off"/>
   <java-symbol type="bool" name="config_regional_wifi_calling_menu_enable" />
   <java-symbol type="bool" name="config_regional_wifi_calling_registration_errorcode" />
+  <java-symbol type="string" name="config_regional_alerts_for_drop_call_toast"/>
+  <java-symbol type="bool" name="config_regional_alerts_for_drop_call"/>
 </resources>
