--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -81,4 +81,7 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_wifi_calling_menu_enable">false</bool>
 
     <bool name="config_regional_wifi_calling_registration_errorcode">false</bool>
+
+    <string name="config_regional_alerts_for_drop_call_toast"></string>
+    <bool name="config_regional_alerts_for_drop_call">false</bool>
 </resources>
