Regional: add overlay flag for Wifi Calling Wizard menu
For some regional carriers, when the wifi calling trun on.
There is a wizard for user

Change-Id: Ie023b44d9063aed2e08040ef5ca14b41af074d8b

--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -84,4 +84,6 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     <string name="config_regional_alerts_for_drop_call_toast"></string>
     <bool name="config_regional_alerts_for_drop_call">false</bool>
+
+    <bool name="config_regional_wifi_calling_wizard">false</bool>
 </resources>
