--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -86,4 +86,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_alerts_for_drop_call">false</bool>
 
     <bool name="config_regional_wifi_calling_wizard">false</bool>
+    <bool name="config_regional_wifi_calling_notificaion_enable">false</bool>
 </resources>
