--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2394,4 +2394,5 @@
   <java-symbol type="string" name="config_regional_alerts_for_drop_call_toast"/>
   <java-symbol type="bool" name="config_regional_alerts_for_drop_call"/>
   <java-symbol type="bool" name="config_regional_wifi_calling_wizard"/>
+  <java-symbol type="bool" name="config_regional_wifi_calling_notificaion_enable"/>
 </resources>
