--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -103,4 +103,6 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_wea_alert_reminder_interval">false</bool>
     <bool name="config_regional_pup_no_available_network">false</bool>
     <bool name="config_regional_wea_alert_tone_enable">false</bool>
+    <!-- Whether to show USB tethering in USB settings -->
+    <bool name="config_regional_usb_tethering_quick_start_enable">false</bool>
 </resources>
