Telephony: 4G+ icon display on status bar.
- Display 4G+ icon upon LTE_CA data RAT.

Change-Id: I9a78edc910051ea484fd27f3671a69519614f4d4

--- a/packages/SystemUI/res/values/arrays.xml
+++ b/packages/SystemUI/res/values/arrays.xml
@@ -104,6 +104,9 @@
         <item>drawable/stat_sys_data_fully_connected_3g</item>
         <!--4G-->
         <item>drawable/stat_sys_data_fully_connected_4g</item>
+        <!--4G+-->
+        <item>drawable/stat_sys_data_fully_connected_4g_plus</item>
+
     </string-array>
 
     <!--data type description-->
