Regional: Add keys to customize hotspot password.
Some carriers want to customize the default value.

Change-Id: I3dfc4f25dbd95a8e5f51ba5fcc1206963beef44d

--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -87,4 +87,15 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
     <bool name="config_regional_wifi_calling_wizard">false</bool>
     <bool name="config_regional_wifi_calling_notificaion_enable">false</bool>
+    <bool name="config_regional_display_icc_id_enable">false</bool>
+    <string name="config_regional_connection_menu_option" translatable="false"></string>
+    <bool name="config_regional_customized_email_signature">false</bool>
+    <bool name="config_regional_call_data_usage_enable">false</bool>
+    <bool name="config_regional_customize_default_browser_icon">false</bool>
+    <string name="config_regional_customize_default_browser_title" translatable="false"></string>
+    <bool name="config_regional_search_use_clientid">false</bool>
+    <bool name="config_regional_show_password_enable">false</bool>
+    <bool name="config_regional_use_empty_password_default">false</bool>
+    <bool name="config_regional_dataUsage_enable_default">false</bool>
+    <bool name="config_regional_security_show_password_enable">false</bool>
 </resources>
