WEA: Add the overlay for unacknowledged alerts
Some carriers require the common WEA vibration cadence should be
repeated 1 minute

Change-Id: I502a73613fcadc33a84055dcf91bb8aa689cc05a

--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -98,4 +98,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_use_empty_password_default">false</bool>
     <bool name="config_regional_dataUsage_enable_default">false</bool>
     <bool name="config_regional_security_show_password_enable">false</bool>
+    <bool name="config_regional_wea_alert_reminder_interval">false</bool>
 </resources>
