WEA: Add the overlay for turning on/off alerts tone
Some carriers require the user should turn ON/OFF the WEA audio
in cell broadcast settings.Add this overlay to turn on/off this
feature.

Change-Id: Ia773eb5351fe5a9b3ba421a7cd46ca1a900198f5

--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -102,4 +102,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_security_show_password_enable">false</bool>
     <bool name="config_regional_wea_alert_reminder_interval">false</bool>
     <bool name="config_regional_pup_no_available_network">false</bool>
+    <bool name="config_regional_wea_alert_tone_enable">false</bool>
 </resources>
