--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2409,4 +2409,5 @@
   <java-symbol type="string" name="config_regional_customize_default_browser_title"/>
   <java-symbol type="bool" name="config_regional_search_use_clientid" />
   <java-symbol type="bool" name="config_regional_wea_alert_reminder_interval" />
+  <java-symbol type="bool" name="config_regional_pup_no_available_network"/>
 </resources>
