QGP: Hide the no-sim signal icon for Smartfren
Hide the no-sim signal icon for Smartfren

Change-Id: Iafdeff8a0cfae88884f93c9c3cac7bfb91839020
CRs-Fixed: 851542

--- a/packages/SystemUI/res/values/config.xml
+++ b/packages/SystemUI/res/values/config.xml
@@ -347,5 +347,8 @@
 
     <!-- Enable operator name on status bar -->
     <bool name="enable_operator_name">false</bool>
+
+    <!-- Hide the no-sim signal icon -->
+    <bool name="hide_nosim_signal_icon">false</bool>
 </resources>
 
