--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -76,9 +76,9 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     
     <bool name="config_regional_display_contact_photo_video_call_off">false</bool>
 
-    <bool name="config_regional_number_patterns_video_call">true</bool>
+    <bool name="config_regional_number_patterns_video_call">false</bool>
 
-    <bool name="config_regional_noti_move_away_lte_video_call">true</bool>
+    <bool name="config_regional_noti_move_away_lte_video_call">false</bool>
 
     <bool name="config_regional_wifi_calling_menu_enable">false</bool>
 
