Added authentication failure message string.
added empty authentication failure string to show
a toast message to the user.

Change-Id: I7fefe91d019e6ba7c3735f24c7e59d5d803958dd
CRs-Fixed: 834787

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2365,4 +2365,5 @@
   <java-symbol type="string" name="turn_on_info" />
   <java-symbol type="string" name="turn_off_info" />
 
+  <java-symbol type="string" name="authentication_failure" />
 </resources>
