framework/base: Zero balance feature.
Code changes for disabling the background
data when the prepaid
sim hits Zero balance

CRs-Fixed: 838142
Change-Id: I5d586453887db87ad0abce3352386dd2891e9470

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2316,4 +2316,12 @@
     <bool name="config_defaultInTouchMode">true</bool>
    <!-- config for FDN contact search. Disabled by default -->
    <bool name="config_fdn_contact_search">false</bool>
+
+   <!-- Zero Balance redirect URL config -->
+   <string name="operator_config_url" translatable="false"></string>
+   <!-- Zero Balance ping URL config -->
+   <string name="operator_ping_url" translatable="false"></string>
+   <!-- Zero Balance feature enable config -->
+   <bool name="config_zero_balance_operator">false</bool>
+
 </resources>
