--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2409,4 +2409,5 @@
   <java-symbol type="bool" name="config_regional_pup_no_available_network"/>
   <java-symbol type="bool" name="config_regional_wea_alert_tone_enable" />
   <java-symbol type="bool" name="config_regional_usb_tethering_quick_start_enable" />
+  <java-symbol type="string" name="authentication_failure" />
 </resources>
