--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2410,4 +2410,5 @@
   <java-symbol type="bool" name="config_regional_search_use_clientid" />
   <java-symbol type="bool" name="config_regional_wea_alert_reminder_interval" />
   <java-symbol type="bool" name="config_regional_pup_no_available_network"/>
+  <java-symbol type="string" name="authentication_failure" />
 </resources>
