--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2282,6 +2282,11 @@
   <java-symbol type="integer" name="launchboost_idlenrrunboost_param" />
   <java-symbol type="integer" name="launchboost_preferidle_param" />
 
+  <!-- cpu boost for PanelView fling-->
+  <java-symbol type="bool" name="config_enableCpuBoostForPanelViewFling" />
+  <java-symbol type="integer" name="panelview_flingboost_schedboost_param" />
+  <java-symbol type="integer" name="panelview_flingboost_cpuboost_param" />
+
   <java-symbol type="bool" name="config_fetch_apn_from_omh_card" />
   <!-- cpu boost for Animationboost -->
   <java-symbol type="bool" name="config_enablePerfBoostForAnimation" />
