Add new icon for 4G+
Added new data icon 4G+ for display on status bar
for LTE_CA.

Change-Id: Ia2b1ef09173f6d5be9eb0cc3866596dd12f5a640
CRs-Fixed: 883711

--- a/packages/SystemUI/res/drawable/stat_sys_data_fully_connected_4g_plus.xml
+++ b/packages/SystemUI/res/drawable/stat_sys_data_fully_connected_4g_plus.xml
@@ -27,20 +27,24 @@ OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN
 IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="8.5dp"
-        android:height="17dp"
-        android:viewportWidth="14.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M5.539,8.135H6.49v1.199H5.539v1.975H4.288V9.334H1.138L1.107,8.423l3.144-6.018h1.288V8.135z M2.333,8.135 h1.955V4.503L4.256,4.497L4.137,4.839L2.333,8.135z"/>
+    android:width="18dp"
+    android:height="20dp"
+    android:viewportWidth="36"
+    android:viewportHeight="36">
 
-<!--
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M12.577,10.104c-0.207,0.347-0.54,0.656-0.992,0.927s-1.038,0.407-1.755,0.407 c-0.889,0-1.621-0.34-2.195-1.018C7.061,9.741,6.774,8.863,6.774,7.787V5.928c0-1.076,0.277-1.954,0.832-2.632 s1.269-1.019,2.141-1.019c0.875,0,1.558,0.261,2.048,0.783c0.49,0.521,0.729,1.202,0.713,2.042l-0.015,0.037h-1.194 c0-0.501-0.132-0.905-0.396-1.211C10.639,3.623,10.261,3.47,9.768,3.47c-0.521,0-0.94,0.23-1.259,0.691 C8.189,4.622,8.03,5.207,8.03,5.916v1.872c0,0.717,0.167,1.307,0.499,1.77s0.766,0.694,1.3,0.694c0.404,0,0.723-0.054,0.957-0.162 c0.234-0.108,0.412-0.239,0.533-0.395v-1.84H9.742V6.741h2.835V10.104z"/>
--->
+        android:fillColor="#FFFFFF"
+        android:pathData="M6.797,13.334h1.231v1.522H6.797v2.509h-1.62v-2.509H1.101l-0.039-1.157l4.069-7.643h1.666V13.334z
+M2.648,13.334h2.53V8.721L5.137,8.713L4.984,9.148L2.648,13.334z" />
     <path
-        android:fillColor="#FFFFFFFF"
-        android:pathData="M8.600000,5.500000l1.200000,-3.000000l1.900000,0.000000L9.700000,6.700000l2.200000,4.300000L9.900000,11.000000L8.700000,7.900000L7.400000,11.000000L5.500000,11.000000l2.100000,-4.300000L5.600000,2.500000l1.900000,0.000000L8.600000,5.500000z"/>
+        android:fillColor="#FFFFFF"
+        android:pathData="M16.155,15.836c-0.269,0.439-0.695,0.832-1.282,1.177c-0.587,0.344-1.344,0.517-2.271,0.517
+c-1.151,0-2.098-0.432-2.841-1.294c-0.744-0.862-1.115-1.978-1.115-3.345v-2.36c0-1.367,0.359-2.481,1.077-3.343
+c0.719-0.863,1.643-1.293,2.772-1.293c1.132,0,2.017,0.331,2.649,0.994c0.633,0.663,0.941,1.528,0.924,2.594l-0.021,0.047h-1.545
+c0-0.638-0.171-1.15-0.513-1.538c-0.341-0.389-0.831-0.583-1.469-0.583c-0.674,0-1.217,0.292-1.63,0.877
+c-0.413,0.585-0.619,1.328-0.619,2.229v2.375c0,0.912,0.215,1.662,0.645,2.25c0.431,0.587,0.992,0.881,1.684,0.881
+c0.522,0,0.935-0.068,1.238-0.205c0.304-0.138,0.533-0.305,0.688-0.502v-2.338h-2.041v-1.413h3.668V15.836z" />
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M19.366,14.701v-2.232h-2.25v-1.541h2.25V8.695h1.5v2.232h2.256v1.541h-2.256v2.232H19.366z" />
 </vector>
