framework/base: Zero balance feature.
Code changes for disabling the background
data when the prepaid
sim hits Zero balance

CRs-Fixed: 838142
Change-Id: I5d586453887db87ad0abce3352386dd2891e9470

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2366,4 +2366,7 @@
   <java-symbol type="string" name="turn_off_info" />
 
   <java-symbol type="string" name="authentication_failure" />
+  <java-symbol type="string" name="operator_config_url" />
+  <java-symbol type="string" name="operator_ping_url" />
+  <java-symbol type="bool" name="config_zero_balance_operator"/>
 </resources>
