--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2324,4 +2324,10 @@
     <!-- Flag specifying whether IMS to CS retry should be available for carrier:
          If false: hard disabled. If true: then depends on user preference. -->
     <bool name="config_carrier_cs_retry_available">false</bool>
+   <!-- Zero Balance redirect URL config -->
+   <string name="operator_config_url" translatable="false"></string>
+   <!-- Zero Balance ping URL config -->
+   <string name="operator_ping_url" translatable="false"></string>
+   <!-- Zero Balance feature enable config -->
+   <bool name="config_zero_balance_operator">false</bool>
 </resources>
