--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2416,4 +2416,6 @@
   <java-symbol type="string" name="operator_config_url" />
   <java-symbol type="string" name="operator_ping_url" />
   <java-symbol type="bool" name="config_zero_balance_operator"/>
+  <!-- From backup&reset -->
+  <java-symbol type="string" name="transport_destination_string" />
 </resources>
