framework/base: Zero balance feature.
Code changes for disabling the background
data when the prepaid
sim hits Zero balance

CRs-Fixed: 838142
Change-Id: I5d586453887db87ad0abce3352386dd2891e9470

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2410,4 +2410,7 @@
   <java-symbol type="bool" name="config_regional_wea_alert_tone_enable" />
   <java-symbol type="bool" name="config_regional_usb_tethering_quick_start_enable" />
   <java-symbol type="string" name="authentication_failure" />
+  <java-symbol type="string" name="operator_config_url" />
+  <java-symbol type="string" name="operator_ping_url" />
+  <java-symbol type="bool" name="config_zero_balance_operator"/>
 </resources>
