Add perflock for NotificationBar drag animation
There has some heavy load in DrawThread when drag down or drag up
notification bar. Call schedule boost and boostup CPU frequency.

Change-Id: Iee13e9f12fe500cada1a0995f93a736cae1847e7

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -2214,6 +2214,9 @@
     <integer-array name="launchboost_param_value"/>
     <integer name="launchboost_timeout_param">0</integer>
     <integer-array name="launchboost_packing_param_value"/>
+    <!-- Whether cpu boost is enabled for PanelView fling -->
+    <bool name="config_enableCpuBoostForPanelViewFling">false</bool>
+    <integer-array name="panelview_flingboost_param_value"/>
     <!-- Support for disabling to fetch APN from OMH card
          for some cdma carriers -->
    <bool name="config_fetch_apn_from_omh_card">true</bool>
