--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2267,6 +2267,10 @@
   <java-symbol type="integer" name="launchboost_timeout_param" />
   <java-symbol type="array" name="launchboost_param_value" />
 
+  <!-- cpu boost for PanelView fling-->
+  <java-symbol type="bool" name="config_enableCpuBoostForPanelViewFling" />
+  <java-symbol type="array" name="panelview_flingboost_param_value"/>
+
   <java-symbol type="bool" name="config_fetch_apn_from_omh_card" />
   <!-- cpu boost for Animationboost -->
   <java-symbol type="bool" name="config_enablePerfBoostForAnimation" />
