Frameworks: Res: overlay to hide cast screen
Add this overlay to hide "Settings-->Display-->Cast Screen" menu in
mirror cast not supported devices.

Change-Id: I7c1491e566aa40009b52917071ca53c6d7940b15

--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -104,4 +104,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_wea_alert_tone_enable">false</bool>
     <!-- Whether to show USB tethering in USB settings -->
     <bool name="config_regional_usb_tethering_quick_start_enable">false</bool>
+    <bool name="config_regional_hide_cast_screen">false</bool>
 </resources>
