--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2423,4 +2423,5 @@
   <java-symbol type="bool" name="config_zero_balance_operator"/>
   <!-- From backup&reset -->
   <java-symbol type="string" name="transport_destination_string" />
+  <java-symbol type="bool" name="config_regional_hide_cast_screen" />
 </resources>
