Frameworks: Res: Add the overlay to remove NFC menu
Some devices may not require NFC menu as the HW does not support it.
Add this overlay to turn on/off this feature.

Change-Id: Id4fafb4c1a59b93331d8a66ecb7be32ac5249efb

--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2424,4 +2424,5 @@
   <!-- From backup&reset -->
   <java-symbol type="string" name="transport_destination_string" />
   <java-symbol type="bool" name="config_regional_hide_cast_screen" />
+  <java-symbol type="bool" name="config_regional_nfc_menu_disable" />
 </resources>
