--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -105,4 +105,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <!-- Whether to show USB tethering in USB settings -->
     <bool name="config_regional_usb_tethering_quick_start_enable">false</bool>
     <bool name="config_regional_hide_cast_screen">false</bool>
+    <bool name="config_regional_nfc_menu_disable">false</bool>
 </resources>
