IMS: Add a flag to control CS retry toast display
CS retry toast will be displayed when the call in dialing
state is moved from LTE to 3G or 2G. The flag is added
to control the display of this toast.

Change-Id: I781ca54565c6e4809ebe7de2087af56f18000484
CRs-Fixed: 891539

--- a/core/res/res/values-mcc450-mnc05/config.xml
+++ b/core/res/res/values-mcc450-mnc05/config.xml
@@ -30,4 +30,8 @@
          If false: hard disabled. If true: then depends on user preference. -->
     <bool name="config_carrier_cs_retry_available">true</bool>
 
+    <!-- Flag specifying whether CS retry toast should be displayed when VoLTE call is
+         retried over CS due to SIP Error -->
+    <bool name="config_carrier_display_csretry_toast">true</bool>
+
 </resources>
