--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -80,6 +80,10 @@
     <!--By default Low Battery video calling is not supported-->
     <bool name="config_low_battery_video_calling_supported">false</bool>
 
+    <!-- Flag specifying whether CS retry toast should be displayed when VoLTE call is
+         retried over CS due to SIP Error -->
+    <bool name="config_carrier_display_csretry_toast">false</bool>
+
     <!-- Array of integer pairs controlling the rate at which the master volume changes
          in response to volume up and down key events.
          The first integer of each pair is compared against the current master volume
