--- a/core/res/res/values/regional_config.xml
+++ b/core/res/res/values/regional_config.xml
@@ -106,4 +106,5 @@ IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
     <bool name="config_regional_usb_tethering_quick_start_enable">false</bool>
     <bool name="config_regional_hide_cast_screen">false</bool>
     <bool name="config_regional_nfc_menu_disable">false</bool>
+    <bool name="config_regional_play_low_battery_sound_for_call">false</bool>
 </resources>
