--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -2425,4 +2425,5 @@
   <java-symbol type="string" name="transport_destination_string" />
   <java-symbol type="bool" name="config_regional_hide_cast_screen" />
   <java-symbol type="bool" name="config_regional_nfc_menu_disable" />
+  <java-symbol type="bool" name="config_regional_play_low_battery_sound_for_call" />
 </resources>
