--- a/packages/Keyguard/res/values/config.xml
+++ b/packages/Keyguard/res/values/config.xml
@@ -46,4 +46,8 @@
 
     <!-- string that specifies the package name of SLC[Subsidy Lock Client] -->
     <string name="config_slc_package_name" translatable="false"> </string>
+    <!-- maximum attempt allowed for an user to enter code -->
+    <integer name="config_max_enter_code_attempt">5</integer>
+    <!-- timeout allowed for an user to enter code -->
+    <integer name="config_timeout_after_max_attempt_milli">3600000</integer>
 </resources>
