--- a/packages/Keyguard/res/layout/keyguard_host_view.xml
+++ b/packages/Keyguard/res/layout/keyguard_host_view.xml
@@ -29,6 +29,18 @@
     android:clipToPadding="false"
     android:importantForAccessibility="yes"> <!-- Needed because TYPE_WINDOW_STATE_CHANGED is sent
                                                   from this view when bouncer is shown -->
+    <com.android.keyguard.WifiSetupButton
+        android:id="@+id/setup_wifi"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top|center_horizontal"
+        android:layout_margin="@dimen/setup_wifi_margin"
+        androidprv:layout_maxWidth="@dimen/keyguard_security_width"
+        android:background="@drawable/subsidy_wifi_button"
+        android:text="@string/kg_subsidy_setup_wifi"
+        android:textColor="?android:attr/textColorSecondary"
+        android:visibility="gone" />
 
     <com.android.keyguard.KeyguardSecurityContainer
         android:id="@+id/keyguard_security_container"
@@ -38,7 +50,7 @@
         android:clipChildren="false"
         android:clipToPadding="false"
         android:padding="0dp"
-        android:layout_gravity="center">
+        android:layout_gravity="bottom|center_horizontal">
         <com.android.keyguard.KeyguardSecurityViewFlipper
             android:id="@+id/view_flipper"
             android:layout_width="match_parent"
