--- a/packages/Keyguard/res/values/arrays.xml
+++ b/packages/Keyguard/res/values/arrays.xml
@@ -32,4 +32,11 @@
         <item>TUV</item><!-- 8 -->
         <item>WXYZ</item><!-- 9 -->
     </string-array>
+
+    <string-array name="mccs_white_listed" translatable="false">
+    </string-array>
+
+    <string-array name="mncs_white_listed" translatable="false">
+    </string-array>
+
 </resources>
