--- a/packages/Keyguard/res/layout/keyguard_password_view.xml
+++ b/packages/Keyguard/res/layout/keyguard_password_view.xml
@@ -87,7 +87,14 @@
 
             </LinearLayout>
        </FrameLayout>
-
+<Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight=".4" />
+    <include layout="@layout/keyguard_notify"
+        android:id="@+id/key_notify"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
     <Space
         android:layout_width="match_parent"
         android:layout_height="0dp"
