--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -250,6 +250,7 @@
   <java-symbol type="attr" name="windowFixedHeightMajor" />
   <java-symbol type="attr" name="windowFixedHeightMinor" />
   <java-symbol type="attr" name="accessibilityFocusedDrawable"/>
+  <java-symbol type="attr" name="keycode"/>
 
   <java-symbol type="bool" name="action_bar_embed_tabs" />
   <java-symbol type="bool" name="action_bar_embed_tabs_pre_jb" />
@@ -1891,4 +1892,8 @@
   <java-symbol type="integer" name="ascrollboost_pcdisbl" />
 
   <java-symbol type="bool" name="config_addVibrateWithRingtoneOption" />
+  <!--Cancel selection support -->
+  <java-symbol type="id" name="cancelSel"/>
+  <java-symbol type="string" name="cancelSel" />
+
 </resources>
