--- a/core/res/res/values/symbols.xml
+++ b/core/res/res/values/symbols.xml
@@ -1896,4 +1896,11 @@
   <java-symbol type="id" name="cancelSel"/>
   <java-symbol type="string" name="cancelSel" />
 
+  <java-symbol type="bool" name="config_ui_optimization"/>
+
+
+  <!-- Modify config_defaultNotificationColor to green liyang 20131226 start -->
+  <java-symbol type="color" name="config_defaultNotificationColor_Green" />
+  <!-- Modify config_defaultNotificationColor to green liyang 20131226 start -->
+
 </resources>
